# interview-prep

./: .gitignore  .pre-commit-config.yaml  README.md  SETUP_COMPLETE.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: progress.md
problems/: distributed_inference_scheduler.py  graphs_course_schedule_ii.py  leetcode_practice_prompt.txt  optimized_dp_solution.py  streaming_top_k_sliding_window.py
problems/arrays/: best_time_to_buy_sell_stock.py  rotate_image.py  two_sum.py
problems/dynamic_programming/: __init__.py
problems/linked_lists/: __init__.py
problems/process_batches_with_memory/: dp_vs_greedy_analysis.py
problems/scheduling/: meeting_scheduler.py
problems/strings/: longest_substring_without_repeating_characters.py  valid_anagram.py
problems/trees/: __init__.py
scripts/: pre_push_check.ps1  setup.py
src/: __init__.py
src/AI_enabled_practice/: above_average_subarray.py  maximize_unique_characters.py  maze.py  queries.py
src/algorithms/: __init__.py  sorting.py
src/cheat_sheets/: coding_round.py  ml_concepts.py  ml_system_design.py  system_design.py
src/data_structures/: __init__.py  binary_tree.py  linked_list.py
src/playground/: test_logger.py
src/problems/: leetcode_practice_prompt.txt  max_area_after_flipping.py
src/problems/arrays/: __init__.py  best_time_to_buy_sell_stock.py  longest_consecutive_sequence.py  two_sum.py
src/problems/graphs/: word_ladder.py
src/problems/process_batches_with_memory/: batch_processing_dp_solution.py  batch_processing_optimization.py  complete_optimal_solution.py  final_validation.py
src/problems/sorting_searching/: __init__.py  container_with_most_water.py
src/problems/strings/: __init__.py  longest_palindromic_substring.py  minimum_window_substring.py  valid_anagram.py
src/utils/: __init__.py
tests/: conftest.py  test_arrays.py  test_data_structures.py
